adding todo.ejs front end 2

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -6,6 +6,16 @@
         <link href="/public/assets/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        
+        <div id="todo-table">
+            <form>
+                <input type="text" name="item" placeholder="Add new item.." required>
+                <input type="submit" value="Add">
+            </form>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ul>
+        </div>
     </body>
 </html>
