--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,19 +3,25 @@
     <head>
         <title>My Todo App</title>
         <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <link href="/public/assets/styles.css" rel="stylesheet" type="text/css">
+        <link href="/assets/styles.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body> 
+        <h1>My Todo List</h1>
         <div id="todo-table">
             <form>
                 <input type="text" name="item" placeholder="Add new item.." required>
-                <input type="submit" value="Add">
+                <button type="submit">Add</button>
             </form>
             <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
+                <%
+                    for(var i=0;i<todos.length;i++){
+                %>
+                    <li><%=todos[i].item; %></li>
+                <%
+                    }
+                %>
             </ul>
         </div>
+        <script src="/assets/todo-list.js"></script>
     </body>
 </html>
